MASTER: resolucion ejercicio 2

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <script src = "exercises/01_variables_and_operators.js"></script>
+        <script src = "exercises/02_strings.js"></script>
         <title> Ejercicios JS </title>
     </head>
